--- a/Life expectancy analysis process.Rmd
+++ b/Life expectancy analysis process.Rmd
@@ -9,6 +9,7 @@ output: pdf_document
 library(tidyverse)
 library(readr)
 library(ggplot2)
+library(reshape2)
 ```
 
 #Data Reminders
@@ -207,4 +208,33 @@ life_expectancy %>%
 
 ```
 
+Question 4: How does immunization affect life expectancy?
+Immunization and life expectancy are positively correlated to a slight degree.
+What kind of immunization have a great influence? Polio and Diphtheria
+
+```{r}
+# df for life expectancy and different kinds of immunization
+expectancy_immunization <- immunization %>%
+  select(`Life expectancy`,`Hepatitis B`,Polio,Diphtheria)
+
+# compute correlation
+immunization_cormat <- round(cor(expectancy_immunization),2)
+immunization_cormat[upper.tri(immunization_cormat)] <- NA
+head(immunization_cormat)
+
+# reshape correlation
+immunization_melted_cormat <- melt(immunization_cormat, na.rm = TRUE)
+head(immunization_melted_cormat)
+
+# plotting melted cormat
+ggplot(immunization_melted_cormat, aes(x = Var1, y = Var2, fill = value)) + 
+  scale_fill_gradient2(low = 'red', mid = 'yellow', high = 'green', limit = c(-1,1),
+                       midpoint = 0, name = "Pearson\nCorrelation") +
+  geom_tile() + theme_classic()
+
+# multiple linear regression model for immunization
+plot(expectancy_immunization)
+immunization_model <- lm(formula = `Life expectancy` ~ Polio + Diphtheria, data = expectancy_immunization)
+summary(immunization_model)
+```
 
