--- a/Life expectancy analysis process.Rmd
+++ b/Life expectancy analysis process.Rmd
@@ -191,8 +191,8 @@ developingS <- social %>%
   select(-Year, -Status)
 summary(developingS)
 
-ggplot(data = social, aes(x = Status, y = `Life expectancy`)) + geom_boxplot()  + stat_summary(fun = mean, geom = "point", size = 2, color = "red") 
-ggplot(data = social, aes(x = Status, y = `Schooling`)) + geom_boxplot() + stat_summary(fun = mean, geom = "point", size = 2, color = "red") 
+ggplot(data = social, aes(x = Status, y = `Life expectancy`)) + geom_boxplot()  + stat_summary(fun = mean, geom = "point", size = 2, color = "red") + theme_clean()
+ggplot(data = social, aes(x = Status, y = `Schooling`)) + geom_boxplot() + stat_summary(fun = mean, geom = "point", size = 2, color = "red") + theme_clean()
 #shows that there is a difference in schooling years and life expectancy for developing and developed countries
 
 #determine if there is a correlation and causation between schooling and life expectancy
@@ -201,12 +201,91 @@ cor.test(social$`Life expectancy`, social$Schooling)
 
 #visual the relationship using lm  
 ggplot(data = social, aes(x = Schooling, y = `Life expectancy`)) + geom_point() + geom_smooth(method = "lm") + xlab("Schooling (yr)") + ylab("Life expectancy(yr)")
++ theme_clean()
 
 #test if there is causation
 social_lm <- lm(`Life expectancy` ~ Schooling, data = social)
 summary(social_lm)
 #only 56.55% of the variability in life expectancy can be explained by years of schooling
 
+## How does immunization affect life expectancy?
+# Immunization and life expectancy are positively correlated to a slight degree.
+## What kind of immunization have a great influence? Polio and Diphtheria
+
+# df for life expectancy and different kinds of immunization
+expectancy_immunization <- immunization %>%
+  select(`Life expectancy`,`Hepatitis B`,Polio,Diphtheria)
+
+# compute correlation
+immunization_cormat <- round(cor(expectancy_immunization, method = "spearman"),2)
+immunization_cormat[upper.tri(immunization_cormat)] <- NA
+head(immunization_cormat)
+# Hepatitis B, Polio, and Diphtheria shows a slight correlation 
+
+# reshape correlation
+immunization_melted_cormat <- melt(immunization_cormat, na.rm = TRUE)
+head(immunization_melted_cormat)
+
+# plotting melted cormat
+ggplot(immunization_melted_cormat, aes(x = Var1, y = Var2, fill = value)) + 
+  scale_fill_gradient2(low = 'red', mid = 'yellow', high = 'green', limit = c(-1,1), midpoint = 0, name = "Spearman\nCorrelation") +
+  geom_tile() + theme_clean()
+
+# multiple linear regression model for immunization
+plot(expectancy_immunization)
+
+immunization_lm <- lm(`Life expectancy` ~., data = expectancy_immunization)
+summary(immunization_lm)
+backward_economy <- step(immunization_lm, direction = "backward", scope = formula(immunization_lm))
+# Only the immunization for Diphtheria and Polio shows a significant relationship with Life expectancy and it explains 16% of variability in life expectancy. 
+
+## Does economical factors and population affect life expectancy? 
+# Economical factors except for Total expenditure affect life expectancy. While population does not affect life expectancy at all.
+
+# df for life expectancy and economical factors
+expectancy_economy <- economical %>%
+  select(`Life expectancy`,`percentage expenditure`,`Total expenditure`,GDP,
+         `Income composition of resources`) %>%
+  filter(`Income composition of resources` > 0)
+
+
+# compute correlation
+economy_cormat <- round(cor(expectancy_economy, method = "spearman"),2)
+economy_cormat[upper.tri(economy_cormat)] <- NA
+economy_cormat
+# Percentage expenditure, GDP, and income composition of resources shows a high correlation with expectancy. While total expenditure only shows a slight correlation.
+
+# reshape correlation
+economy_melted_cormat <- melt(economy_cormat, na.rm = TRUE)
+head(economy_melted_cormat)
+
+# plotting melted cormat
+ggplot(economy_melted_cormat, aes(x = Var1, y = Var2, fill = value)) + 
+  scale_fill_gradient2(low = 'red', mid = 'yellow', high = 'green', limit = c(-1,1),
+                       midpoint = 0, name = "Spearman\nCorrelation") +
+  geom_text(aes(Var2,Var1,label = value), color = "black",size = 4)+
+  geom_tile() + theme_clean() 
+
+# multiple linear regression model for immunization
+economy_lm <- lm(`Life expectancy` ~., data = expectancy_economy)
+summary(economy_lm)
+economy_lm1 <- lm(`Life expectancy` ~ `percentage expenditure` + GDP + `Income composition of resources`, data = expectancy_economy)
+summary(economy_lm1)
+# [economy_lm1], percentage expenditure, GDP, and income composition explains 79% of the variability in life expectancy
+backward_economy <- step(economy_lm, direction = "backward", scope = formula(economy_lm))
+
+
+# df for expectancy and population
+expectancy_population <- life_expectancy %>%
+  select(`Life expectancy`, Population)
+
+#determine if there is a correlation schooling and life expectancy
+cor.test(expectancy_population$`Life expectancy`, expectancy_population$Population,
+         method = "spearman")
+# very low correlation, 9%
+
+# scatter plot for expectancy and population
+ggplot(data = expectancy_population, aes(x = Population, y = `Life expectancy`)) + geom_point() + theme_classic()
 ```
   
 
@@ -252,32 +331,4 @@ life_expectancy %>%
 
 ```
 
-Question 4: How does immunization affect life expectancy?
-Immunization and life expectancy are positively correlated to a slight degree.
-What kind of immunization have a great influence? Polio and Diphtheria
-
-```{r}
-# df for life expectancy and different kinds of immunization
-expectancy_immunization <- immunization %>%
-  select(`Life expectancy`,`Hepatitis B`,Polio,Diphtheria)
-
-# compute correlation
-immunization_cormat <- round(cor(expectancy_immunization),2)
-immunization_cormat[upper.tri(immunization_cormat)] <- NA
-head(immunization_cormat)
-
-# reshape correlation
-immunization_melted_cormat <- melt(immunization_cormat, na.rm = TRUE)
-head(immunization_melted_cormat)
-
-# plotting melted cormat
-ggplot(immunization_melted_cormat, aes(x = Var1, y = Var2, fill = value)) + 
-  scale_fill_gradient2(low = 'red', mid = 'yellow', high = 'green', limit = c(-1,1), midpoint = 0, name = "Pearson\nCorrelation") +
-  geom_tile() + theme_clean()
-
-# multiple linear regression model for immunization
-plot(expectancy_immunization)
-immunization_model <- lm(formula = `Life expectancy` ~ Polio + Diphtheria, data = expectancy_immunization)
-summary(immunization_model)
-```
 
