--- a/Life expectancy analysis process.Rmd
+++ b/Life expectancy analysis process.Rmd
@@ -94,10 +94,10 @@ status <- life_expectancy %>%
   select(Year, Status) %>%
   group_by(Status, Year)
 
-ggplot(data = status, aes(x = factor(Year), fill = Status)) + geom_bar()
+ggplot(data = status, aes(x = factor(Year), fill = Status)) + geom_bar() + theme_clean()
 
 #life expectancy per year 
-ggplot(data = life_expectancy, aes(y = `Life expectancy`, x = factor(Year))) + geom_count()
+ggplot(data = life_expectancy, aes(y = `Life expectancy`, x = factor(Year))) + geom_count() + theme_clean()
 #we can see that over the years countries are moving towards longer life expectancy, very few points left in 40-50s range 
 
 #check correlations between variables
@@ -205,8 +205,7 @@ cor.test(social$`Life expectancy`, social$Schooling)
 #indicates high correlation so can be modeled using linear regression 
 
 #visual the relationship using lm  
-ggplot(data = social, aes(x = Schooling, y = `Life expectancy`)) + geom_point() + geom_smooth(method = "lm") + xlab("Schooling (yr)") + ylab("Life expectancy(yr)")
-+ theme_clean()
+ggplot(data = social, aes(x = Schooling, y = `Life expectancy`)) + geom_point() + geom_smooth(method = "lm") + xlab("Schooling (yr)") + ylab("Life expectancy(yr)") + theme_clean()
 
 #test if there is causation
 social_lm <- lm(`Life expectancy` ~ Schooling, data = social)
@@ -343,6 +342,10 @@ shapiro.test(expectancy_status$life_expectancy)
 # kruskal-wallis test
 kruskal.test(expectancy_status$life_expectancy, expectancy_status$Status)
 
+expectancy_status %>%
+group_by(Status) %>%
+summarize(Mean = mean(life_expectancy, na.rm=TRUE),
+          Median = median(life_expectancy), Count = n())
 ```
 
 ```{r}
@@ -391,7 +394,7 @@ summary(health_lm4) #only 1.70% explained
 #how did life expectancy change over the years
 
 #show  life expectancy in developed and developing countries over the years
-ggplot(data = life_expectancy, aes(x = Status, y = `Life expectancy`)) + geom_boxplot()  + stat_summary(fun = mean, geom = "point", size = 2, color = "red") + facet_wrap(.~Year, scales = "free")
+ggplot(data = life_expectancy, aes(x = Status, y = `Life expectancy`)) + geom_boxplot()  + stat_summary(fun = mean, geom = "point", size = 2, color = "red") + facet_wrap(.~Year, scales = "free") + theme_clean()
 #shows that life expectancy really improved over the years, still there is gap between the developed and developing countries 
 
 #remove all rows with NA
